--- a/Week 3/Web-Canvas-Stick-Figures/static/sticks5.html
+++ b/Week 3/Web-Canvas-Stick-Figures/static/sticks5.html
@@ -33,7 +33,7 @@
   canvas.addEventListener('click', setNewTarget);
 
   // get the "drawing context" - the object that can actually draw on the canvas
-  const c = canvas.getContext("2d");
+  const canvas_context = canvas.getContext("2d");
 
   // set our drawing style
   c.lineWidth = 3;
