--- a/Week 3/Web-Canvas-Stick-Figures/static/sticks7.html
+++ b/Week 3/Web-Canvas-Stick-Figures/static/sticks7.html
@@ -48,7 +48,7 @@
   canvas.addEventListener('click', addTarget);
 
   // get the "drawing context" - the object that can actually draw on the canvas
-  const c = canvas.getContext("2d");
+  const canvas_context = canvas.getContext("2d");
 
   // set our drawing style
   c.lineWidth = 3;
@@ -185,7 +185,7 @@
 
   const diamondColors = [ "#f00", "#0f0", "#08f"];
 
-  function addDiamond(c) {
+  function addDiamond(canvas_context) {
     diamonds.push({
       x: Math.floor(Math.random()*(c.canvas.width-40)+20),
       y: Math.floor(Math.random()*(c.canvas.height-170)+150),
@@ -228,13 +228,13 @@
 
 
   // draw a target at x,y
-  function drawTarget(c, x, y) {
+  function drawTarget(canvas_context, x, y) {
     line(c, x-10, y, x+10, y);
     line(c, x, y-10, x, y+10);
   }
 
   // draw a diamond of a given color (as a CSS color string) at x,y
-  function drawDiamond(c, x, y, color) {
+  function drawDiamond(canvas_context, x, y, color) {
     c.save();
     c.beginPath();
     c.moveTo(x-20, y);
