--- a/Week 3/Web-Canvas-Stick-Figures/static/draw-under-clickable.html
+++ b/Week 3/Web-Canvas-Stick-Figures/static/draw-under-clickable.html
@@ -66,7 +66,7 @@ canvas, article {
     window.hili.height = window.innerHeight;
 
     // get the context
-    const c = window.hili.getContext("2d");
+    const canvas_context = window.hili.getContext("2d");
 
     // set the drawing style
     c.lineWidth = 4;
