--- a/Week 3/Web-Canvas-Stick-Figures/static/sticks0.html
+++ b/Week 3/Web-Canvas-Stick-Figures/static/sticks0.html
@@ -30,7 +30,7 @@
   'use strict';
 
   // get the "drawing context" - the object that can actually draw on the canvas
-  const c = document.getElementById("canvas").getContext("2d");
+  const canvas_context = document.getElementById("canvas").getContext("2d");
 
   // set our drawing style
   c.lineWidth = 3;
@@ -40,33 +40,33 @@
   c.lineCap = "round";   // or butt or square
   c.lineJoin = "round";  // or bevel or miter
 
-  // c.setLineDash([20,20]); // works best with lineCap butt
+  // canvas_context.setLineDash([20,20]); // works best with lineCap butt
 
   // draw a line
-  // c.beginPath();
-  // c.moveTo(0, 0);
-  // c.lineTo(400, 200);
-  // c.stroke();
+  // canvas_context.beginPath();
+  // canvas_context.moveTo(0, 0);
+  // canvas_context.lineTo(400, 200);
+  // canvas_context.stroke();
 
   // draw a triangle
-  // c.beginPath();
-  // c.moveTo(200, 450);
-  // c.lineTo(400, 150);
-  // c.lineTo(600, 450);
-  // c.fill();
+  // canvas_context.beginPath();
+  // canvas_context.moveTo(200, 450);
+  // canvas_context.lineTo(400, 150);
+  // canvas_context.lineTo(600, 450);
+  // canvas_context.fill();
 
-  // c.stroke();
+  // canvas_context.stroke();
 
-  // c.closePath();
-  // c.stroke();
+  // canvas_context.closePath();
+  // canvas_context.stroke();
 
   // draw a circle
-  // c.fillStyle="white";
-  // c.strokeStyle = "green";
-  // c.beginPath();
-  // c.arc(400, 150, 100, 0, 2 * Math.PI, false);
-  // c.fill();
-  // c.stroke();
+  // canvas_context.fillStyle="white";
+  // canvas_context.strokeStyle = "green";
+  // canvas_context.beginPath();
+  // canvas_context.arc(400, 150, 100, 0, 2 * Math.PI, false);
+  // canvas_context.fill();
+  // canvas_context.stroke();
 
   // exercise for you:
   // drop the triangle
